Limit results to prevent interface overflow

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -694,6 +694,7 @@
 		width: 100%;
 		padding: 0.6em;
 		font-size: 1.3em;
+		text-shadow: none;
 		border-radius: 10px;
 		box-sizing: border-box;
 		backdrop-filter: blur(1em);
